fixed navbar visibilty hiding

--- a/components/nav/nav.module.scss
+++ b/components/nav/nav.module.scss
@@ -138,7 +138,7 @@
 
 .separator {
 	width: 100%;
-	height: 1px;
+	height: 0.0625rem;
 	background: linear-gradient(
 		90deg,
 		rgba(130, 130, 130, 0) 0%,
